--- a/01-Weather-App/package.json
+++ b/01-Weather-App/package.json
@@ -7,6 +7,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/picker": "^1.8.1",
     "axios": "^1.0.0",
     "expo": "~46.0.13",
     "expo-location": "~14.3.0",
