--- a/02-Login-App/package.json
+++ b/02-Login-App/package.json
@@ -11,7 +11,7 @@
     "@react-navigation/native-stack": "^6.9.0",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
-    "firebase": "^9.11.0",
+    "firebase": "8.2.3",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-safe-area-context": "4.3.1",
