--- a/03-Learning-App/package.json
+++ b/03-Learning-App/package.json
@@ -9,20 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
     "expo": "~46.0.16",
-    "expo-av": "~12.0.4",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-modalize": "^2.1.1",
-    "react-native-navigation": "^7.30.0-alpha.1",
-    "react-native-progress-circle": "^2.1.0",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-navigation-stack": "^2.10.4"
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
