added project 5 dependencies

--- a/01-Weather-App/app.json
+++ b/01-Weather-App/app.json
@@ -24,10 +24,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.GoreSoft.Scanner"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "92e26843-5e08-4310-901c-b772a38cf9d2"
+      }
     }
   }
 }
