--- a/01-Weather-App/package.json
+++ b/01-Weather-App/package.json
@@ -12,6 +12,7 @@
     "expo": "~46.0.13",
     "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
     "react": "18.0.0",
     "react-native": "0.69.6"
   },
