--- a/04-Bar-Code-Scanner/package.json
+++ b/04-Bar-Code-Scanner/package.json
@@ -13,7 +13,8 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
-    "expo-barcode-scanner": "~11.4.0"
+    "expo-barcode-scanner": "~11.4.0",
+    "expo-splash-screen": "~0.16.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
