--- a/05-Plant-App/package.json
+++ b/05-Plant-App/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.2",
     "expo": "~46.0.16",
+    "expo-app-loading": "~2.1.0",
+    "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
