--- a/04-Bar-Code-Scanner/app.json
+++ b/04-Bar-Code-Scanner/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "05",
-    "slug": "05",
+    "name": "Barcode Scanner",
+    "slug": "goresoftBarcodeScanner",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -21,6 +21,8 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "goresoft.barcodescanner",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
